tests/errors/existential/invalid-assign.expect
---CODE---
1
---STDERR---
error: parameter in exists binding is not existentially quantified
  ┌─ tests/errors/existential/invalid-assign.fil:2:12
  │
2 │     exists W = 10;
  │            ^ parameter is not existentially quantified

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
